Fix overflow in shopping cart

--- a/Frontend/resources/assets/sass/template/main.scss
+++ b/Frontend/resources/assets/sass/template/main.scss
@@ -205,7 +205,7 @@ a#scrollUp i{
   font-weight: 300;
   padding:0;
   padding-right: 0;
-  margin-top: 10px;
+  margin-top: 30px;
 }
 
 
@@ -1520,6 +1520,10 @@ h2.title {
 /*************************
 *******Cart CSS******
 **************************/
+
+.cart_delete {
+  width: 100%;
+}
 
 #do_action {
   margin-bottom: 50px;
